--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-static-top">
+<nav class="navbar navbar-static-top">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,12 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><em>UCSB Hyperloop Pod Team</em></a>
+      <a class="navbar-brand" href="/"><em>UCSB Hyperloop</em></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav">
-        
+        <li><a href="/#team-title">Team</a></li>
+        <li><a href="/#footer">Contact</a></li>
+        <li <%= "class=active" if request.fullpath == blog_path %>><a href="/blog">Blog</a></li>
       </ul>
     </div>
   </div>
