--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>UCSB Hyperloop Team</title>
+  <link rel="stylesheet" href="gridlex.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,7 +12,7 @@
 
 <%= render 'layouts/nav' %>
 
-  <div id="<%= params[:controller]%>-container" class="container">
+  <div id="<%= params[:controller]%>-container">
     
     <%= yield %>
 
