fixed images for production

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -7,7 +7,7 @@
 
 
 #hero {
-	background: url('/assets/hyperloop.jpg') no-repeat;
+	background: image-url("hyperloop.jpg") no-repeat;
 	background-size: 100%;
 	width: 100%;
 }
