--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
 	</div>
 </div>
 <div id="team-pic-bg">
-	<img src="/assets/team.jpg" id="team-pic"/>
+	<%= image_tag "team.jpg", :id => 'team-pic' %>
 </div>
 <h3 id="team-title">Our Team</h3>
 <div class="cells team container">
