image height fix

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div id="header-text">
 	<div id="hero">
-		<img src="/assets/hyperloop.jpg" style="width:100%;visibility:hidden"/>
+		<%= image_tag "hyperloop.jpg", :style => "width:100%;visibility:hidden" %>
 	</div>
 </div>
 <div class="cells container">
