--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
 		</div>
 		<div class="col-md-6">
 			<h2>What is Hyperloop?</h2>
-			<p>The <a href="http://www.spacex.com/hyperloopalpha">hyperloop</a> is proposed advanced method of high speed transportation between cities that are less than about 900 miles apart (e.g. Los Angeles and San Francisco). The system uses a capsule that is propelled through a low pressure steel tube as it rests on frictionless air bearings of mag-lev.</p>
+			<p>The <a href="http://www.spacex.com/hyperloopalpha">hyperloop</a> is proposed advanced method of high speed transportation between cities that are less than about 900 miles apart (e.g. Los Angeles and San Francisco). The system uses a capsule that is propelled through a low pressure steel tube as it rests on frictionless air bearings or mag-lev.</p>
 		</div>
 	</div>
 </div>
