--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,11 +7,11 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h2>Who We Are</h2>
-			<p>We are an interdisiplinary team of 29 students and professors competing in SpaceX's <a href="http://www.spacex.com/hyperloop">Hyperloop Pod Competition</a>. The competition involves designing and building a pod to be tested on a track to be contructed at SpaceX's Hawthorne headquarters in June 2016.</p>
+			<p>We are an interdisiplinary team of 29 students and professors competing in SpaceX's <a href="http://www.spacex.com/hyperloop">Hyperloop Pod Competition</a>. The competition involves designing and building a pod to be tested on a track to be constructed at SpaceX's Hawthorne headquarters in June 2016.</p>
 		</div>
 		<div class="col-md-6">
-			<h2>What is Hyperloop?</h2>
-			<p>The <a href="http://www.spacex.com/hyperloopalpha">hyperloop</a> is proposed advanced method of high speed transportation between cities that are less than about 900 miles apart (e.g. Los Angeles and San Francisco). The system uses a capsule that is propelled through a low pressure steel tube as it rests on frictionless air bearings or mag-lev.</p>
+			<h2>What is the Hyperloop?</h2>
+			<p>The <a href="http://www.spacex.com/hyperloopalpha">Hyperloop</a> is a proposed advanced method of high speed transportation between cities that are less than about 900 miles apart (e.g. Los Angeles and San Francisco). The system uses a capsule that is propelled through a low pressure steel tube as it rests on frictionless air bearings or mag-lev.</p>
 		</div>
 	</div>
 </div>
