--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -82,8 +82,8 @@
 	<div class="container">
 		<h3>Contact & Updates</h3>
 		<p><a href="mailto:ucsbhyperloop@gmail.com">ucsbhyperloop@gmail.com</a></p>
-		<p><a href="">Facebook <i class="fa fa-external-link"></i></a></p>
-		<p><a href="">Twitter <i class="fa fa-external-link"></i></a></p>
+		<!-- <p><a href="">Facebook <i class="fa fa-external-link"></i></a></p> -->
+		<p><a href="https://twitter.com/ucsbhyperloop">Twitter <i class="fa fa-external-link"></i></a></p>
 	</div>
 	
 </footer>
