added finance person

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -76,6 +76,12 @@
 				<li><em>Graduate Advisor:</em> Will Miller</li>
 			</ul>
 		</div>
+		<div class="col-md-12">
+			<h3>Finances</h3>
+			<ul>
+				<li>Christian Arita</li>
+			</ul>
+		</div>
 	</div>
 </div>
 <footer id="footer">
