--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,7 +30,7 @@
 				<li>Viraj Khatri</li>
 				<li>Nathan Ransom</li>
 				<br>
-				<li><em>Faculty Advisor:</em> <a href="https://designlab.me.ucsb.edu/">Tyler Susko</a>, PhD M.E., MIT</li>
+				<li><em>Faculty Advisor:</em> <a href="https://designlab.me.ucsb.edu/">Tyler Susko</a>, PhD ME, MIT</li>
 				<li><em>Graduate Student Advisor:</em> Petros Serbana</li>
 			</ul>
 		</div>
@@ -43,7 +43,7 @@
 				<li>Elena Georgieva</li>
 				<li>Terrence Tran</li>
 				<br>
-				<li><em>Facutly Advisor:</em> <a href="http://www.tmp.ucsb.edu/about/lecturers/ilan-ben-yaacov">Ilan Ben-Yaacov</a>, PhD E.C.E, UCSB</li>
+				<li><em>Facutly Advisor:</em> <a href="http://www.tmp.ucsb.edu/about/lecturers/ilan-ben-yaacov">Ilan Ben-Yaacov</a>, PhD ECE, UCSB</li>
 				<li><em>Power Electronics Advisor:</em> Jim Honea, PhD, ECE, UCSB</li>
 				<li><em>Graduate Student Advisor:</em> Stephanie Johnson</li>
 			</ul>
@@ -59,7 +59,7 @@
 				<li>Kristine Lai</li>
 				<li>Daniel Vong</li>
 				<br>
-				<li><em>Faculty Advisor:</em> <a href="https://me.ucsb.edu/people/greg-dahlen">Greg Dahlen</a>, PhD, M.E., UCSB</li>
+				<li><em>Faculty Advisor:</em> <a href="https://me.ucsb.edu/people/greg-dahlen">Greg Dahlen</a>, PhD, ME, UCSB</li>
 				<li><em>Graduate Student Advisor: </em>Brian Gibson</li>
 			</ul>
 		</div>
@@ -73,7 +73,7 @@
 				<li>Connor Mulcahey</li>
 				<br>
 				<li><em>Faculty Advisor:</em> <a href="http://www.ece.ucsb.edu/Faculty/Johnson/">John Johnson</a>, PhD ECE, UCSB</li>
-				<li><em>Graduate Advisor:</em> Will Miller</li>
+				<li><em>Graduate Student Advisor:</em> Will Miller</li>
 			</ul>
 		</div>
 		<div class="col-md-12">
