--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h2>Who We Are</h2>
-			<p>We are an interdisiplinary team of 30 students and professors competing in SpaceX's <a href="http://www.spacex.com/hyperloop">Hyperloop Pod Competition</a>. The competition involves designing and building a pod to be tested on a track to be constructed at SpaceX's Hawthorne headquarters in June 2016.</p>
+			<p>We are an interdisiplinary team of 30 students and professors competing in SpaceX's <a href="http://www.spacex.com/hyperloop">Hyperloop Pod Competition</a>. The competition involves designing and building a pod to be tested on a track constructed at SpaceX's Hawthorne headquarters in June 2016.</p>
 		</div>
 		<div class="col-md-6">
 			<h2>What is the Hyperloop?</h2>
