--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,10 @@ a:hover, a:focus, a:active {
 	color: #fcb52b;
 }
 
+.col-md-6 img {
+	max-width: 70%;
+}
+
 footer {
 	padding-top: 20px;
 	box-sizing: border-box;
