--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,9 +13,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <li><a href="/#sponsors">Sponsors</a></li>
         <li><a href="/#team-title">Team</a></li>
         <li><a href="/#footer">Contact</a></li>
         <li <%= "class=active" if request.fullpath == blog_path %>><a href="/blog">Blog</a></li>
+
       </ul>
     </div>
   </div>
