--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 			<p>The <a href="http://www.spacex.com/hyperloopalpha">Hyperloop</a> is a proposed advanced method of high speed transportation between cities that are less than about 900 miles apart (e.g. Los Angeles and San Francisco). The system uses a capsule that is propelled through a low pressure steel tube as it rests on frictionless air bearings or magnets.</p>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" id="sponsors">
 		<h2>Sponsors</h2>
 		<div class="col-md-6">
 			<%= image_tag("raytheon.jpg")%>
