--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,11 @@ a:hover, a:focus, a:active {
 	max-width: 100%;
 }
 
+hero span {
+	font-size: 0.6em;
+	color: #ddd;
+}
+
 footer {
 	padding-top: 20px;
 	box-sizing: border-box;
