--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <div id="header-text">
 	<div id="hero">
 		<%= image_tag "hyperloop.jpg", :style => "width:100%;visibility:hidden" %>
+		<span>ILLUSTRATION BY HTT/JUMPSTARTFUND/OMEGABYTE</span>
 	</div>
 </div>
 <div class="cells container">
