--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,9 +47,10 @@ a:hover, a:focus, a:active {
 	max-width: 100%;
 }
 
-hero span {
+#hero span {
 	font-size: 0.6em;
 	color: #ddd;
+	margin-top: 2px;
 }
 
 footer {
