--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,9 +48,9 @@ a:hover, a:focus, a:active {
 }
 
 #hero span {
-	font-size: 0.6em;
-	color: #ddd;
-	margin-top: 2px;
+	font-size: 0.7em;
+	color: #ccc;
+	margin: 2px;
 }
 
 footer {
