--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,8 +27,12 @@
 		</div>
 	</div>
 </div>
-<div id="team-pic-bg">
-	<%= image_tag "team.jpg", :id => 'team-pic' %>
+<div id="team-pic-bg" class="owl-carousel">
+		<div class="slide"><%= image_tag "team2.jpg" %></div>
+		<div class="slide"><%= image_tag "pod1.jpg" %></div>
+		<div class="slide"><%= image_tag "team.jpg" %></div>
+		<div class="slide"><%= image_tag "pod2.jpg" %></div>
+		<div class="slide"><%= image_tag "pod3.jpg" %></div>
 </div>
 <h3 id="team-title">Our Team</h3>
 <div class="cells team container">
