--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,6 +26,21 @@
 			<%= image_tag("ir.png") %>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="progress-pie-chart" data-percent="37.5">
+			  <div class="ppc-progress">
+			    <div class="ppc-progress-fill"></div>
+			  </div>
+			  <div class="ppc-percents">
+			    <div class="pcc-percents-wrapper">
+			      <span>%</span>
+			    </div>
+			  </div>
+			</div>
+			<h3 id="funding-goal">$15K/$40K Funded</h3>
+		</div>
+	</div>
 </div>
 <div id="team-pic-bg" class="owl-carousel">
 		<div class="slide"><%= image_tag "team2.jpg" %></div>
