--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -39,6 +39,7 @@
 			  </div>
 			</div>
 			<h3 id="funding-goal">$15K/$40K Funded</h3>
+			<a href="mailto:ucsbhyperloop@gmail.com?subject=Sponsorship Inquiry" class="btn btn-primary btn-lg">Become a Sponsor!</a>
 		</div>
 	</div>
 </div>
