--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,10 +20,15 @@
 	<h2>Sponsors</h2>
 	<div class="row">
 		<div class="col-md-6">
-			<%= image_tag("raytheon.jpg")%>
+			<%= image_tag("raytheon.png")%>
 		</div>
 		<div class="col-md-6">
 			<%= image_tag("ir.png") %>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<h2><strong><em style="color: #dc313a;font-family: serif;">Jonathan Siegel</em></strong></h2>
 		</div>
 	</div>
 	<div class="row">
