--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 	<% @posts.each do |p| %>
 		<div class="row">
 			<div class="col-md-12">
-			<h3><%= p.title %></h3>
+			<h3><a href="<%= post_path(p) %>"><%= p.title %></a></h3>
 			<p><em><%= p.created_at.strftime('%m/%d/%Y') %></em></p>
 			<article>
 				<%= p.text.html_safe %>
