--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,20 +20,36 @@
 	<h2>Sponsors</h2>
 	<div class="row">
 		<div class="col-md-6">
-			<%= image_tag("raytheon.png")%>
+			<a href="raytheon.com"><%= image_tag("raytheon.png")%></a>
+		</div>
+		<br>
+		<div class="col-md-6">
+			<a href="http://company.ingersollrand.com/ircorp/en/index.html"><%= image_tag("ir.png") %></a>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-6">
+			<h2><a href="https://angel.co/usiegj00"><strong><em style="color: #0c5e96;font-size:1.8em;font-family: serif;">Jonathan Siegel</em></strong></a></h2>
 		</div>
 		<div class="col-md-6">
-			<%= image_tag("ir.png") %>
+			<a href="http://www.northropgrumman.com/Pages/default.aspx"><%= image_tag("ng.png") %></a>
 		</div>
 	</div>
+	<br>
 	<div class="row">
-		<div class="col-md-12">
-			<h2><strong><em style="color: #dc313a;font-family: serif;">Jonathan Siegel</em></strong></h2>
+		<div class="col-md-6">
+			<a href="http://www.econ.ucsb.edu/"><%= image_tag("ucsbecon.png") %></a>
+		</div>
+		<br>
+		<div class="col-md-6">
+			<a href="http://sensus.com/"><%= image_tag("sensus.png") %></a>
 		</div>
 	</div>
+	<br>
 	<div class="row">
 		<div class="col-md-12">
-			<div class="progress-pie-chart" data-percent="37.5">
+			<div class="progress-pie-chart" data-percent="100" data-start="60">
 			  <div class="ppc-progress">
 			    <div class="ppc-progress-fill"></div>
 			  </div>
@@ -43,7 +59,7 @@
 			    </div>
 			  </div>
 			</div>
-			<h3 id="funding-goal">$15K/$40K Funded</h3>
+			<h3 id="funding-goal">$40K/$40K Funded!</h3>
 			<a href="mailto:ucsbhyperloop@gmail.com?subject=Sponsorship Inquiry" class="btn btn-primary btn-lg">Become a Sponsor!</a>
 		</div>
 	</div>
