--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -43,25 +43,22 @@
 		</div>
 		<br>
 		<div class="col-md-6">
-			<a href="http://sensus.com/"><%= image_tag("sensus.png") %></a>
+			<a href="http://tenon.com/"><%= image_tag("tenon.png") %></a>
 		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3"></div>
+		<div class="col-md-6">
+			<a href="https://www.calchamber.com/Pages/default.aspx"><%= image_tag("ca.png") %></a>
+		</div>
+		<div class="col-md-3"></div>
 	</div>
 	<br>
 	<div class="row">
 		<div class="col-md-12">
-			<div class="progress-pie-chart" data-percent="100" data-start="60">
-			  <div class="ppc-progress">
-			    <div class="ppc-progress-fill"></div>
-			  </div>
-			  <div class="ppc-percents">
-			    <div class="pcc-percents-wrapper">
-			      <span>%</span>
-			    </div>
-			  </div>
-			</div>
-			<h3 id="funding-goal">$40K/$40K Funded!</h3>
 			<a href="mailto:ucsbhyperloop@gmail.com?subject=Sponsorship Inquiry" class="btn btn-primary btn-lg">Become a Sponsor!</a>
 		</div>
+		<br>
 	</div>
 </div>
 <div id="team-pic-bg" class="owl-carousel">
