updated ASFB stuff

--- a/app/views/asfb/index.html.erb
+++ b/app/views/asfb/index.html.erb
@@ -6,6 +6,17 @@
 	<br>
 </div>
 <div class="row">
+		<div class="col-md-4">
+			<a class="btn btn-success btn-lg btn-block" href="https://docs.google.com/spreadsheets/d/1pA05YU_u9caDS1Tz6zPwqy0qAqTcooMZ4Yn5h1F3KW4/edit?usp=sharing" target="_blank">BUDGET</a>
+		</div>
+		<div class="col-md-4">
+			<a class="btn btn-warning btn-lg btn-block" href="/HYPERLOOP_ASFB.pdf" target="_blank">SLIDES</a>
+		</div>
+		<div class="col-md-4">
+			<a class="btn btn-primary btn-lg btn-block" href="http://www.spacex.com/hyperloop" target="_blank">COMPETITION PAGE</a>
+		</div>
+	</div>
+<div class="row">
 	<div class="col-md-12" style="text-align: center;">
 			<%= image_tag "dw.jpg", :style => "width: 64%;margin: 0 auto;" %>
 	</div>
@@ -24,15 +35,6 @@
 			<p style="font-size: 18px !important;">We think this competition will be a fantastic way to add to UCSB's reputation on a world stage.</p>
 		</div>
 		<div class="col-md-1"></div>
-	</div>
-
-	<div class="row">
-		<div class="col-md-6">
-			<a class="btn btn-success btn-lg btn-block" href="https://docs.google.com/spreadsheets/d/1pA05YU_u9caDS1Tz6zPwqy0qAqTcooMZ4Yn5h1F3KW4/edit?usp=sharing" target="_blank">VIEW OUR BUDGET</a>
-		</div>
-		<div class="col-md-6">
-			<a class="btn btn-primary btn-lg btn-block" href="http://www.spacex.com/hyperloop" target="_blank">READ ABOUT THE COMPETITION</a>
-		</div>
 	</div>
 	<div class="row">
 		<br>
