--- a/app/views/asfb/index.html.erb
+++ b/app/views/asfb/index.html.erb
@@ -6,16 +6,17 @@
 	<br>
 </div>
 <div class="row">
-		<div class="col-md-4">
-			<a class="btn btn-success btn-lg btn-block" href="https://docs.google.com/spreadsheets/d/1pA05YU_u9caDS1Tz6zPwqy0qAqTcooMZ4Yn5h1F3KW4/edit?usp=sharing" target="_blank">BUDGET</a>
-		</div>
-		<div class="col-md-4">
-			<a class="btn btn-warning btn-lg btn-block" href="/HYPERLOOP_ASFB.pdf" target="_blank">SLIDES</a>
-		</div>
-		<div class="col-md-4">
-			<a class="btn btn-primary btn-lg btn-block" href="http://www.spacex.com/hyperloop" target="_blank">COMPETITION PAGE</a>
-		</div>
+	<div class="col-md-4">
+		<a class="btn btn-success btn-lg btn-block" href="https://docs.google.com/spreadsheets/d/1pA05YU_u9caDS1Tz6zPwqy0qAqTcooMZ4Yn5h1F3KW4/edit?usp=sharing" target="_blank">BUDGET <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
 	</div>
+	<div class="col-md-4">
+		<a class="btn btn-warning btn-lg btn-block" href="/HYPERLOOP_ASFB.pdf" target="_blank">SLIDES <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
+	</div>
+	<div class="col-md-4">
+		<a class="btn btn-primary btn-lg btn-block" href="http://www.spacex.com/hyperloop" target="_blank">COMPETITION <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
+	</div>
+</div>
+<br>
 <div class="row">
 	<div class="col-md-12" style="text-align: center;">
 			<%= image_tag "dw.jpg", :style => "width: 64%;margin: 0 auto;" %>
@@ -24,7 +25,7 @@
 
 	<div class="row">
 		<div class="col-md-1"></div>
-		<div class="col-md-10" >
+		<div class="col-md-10">
 			<br>
 			<p style="font-size: 18px !important;">We are an interdisiplanry team of over 20 students competing in SpaceX's Hyperloop Pod Competion for our senior engineering capstone project.</p>
 			<p style="font-size: 18px !important;">The Hyperloop is a proposal by SpaceX & Tesla CEO Elon Musk for a new mode of transportation that would travel at speeds faster than commercial jets, though without leaving the ground. It can go this fast becuase it rides through a near vacuum tube on air barings or mag-lev (which our disign uses). The original proposal suggested the use case of travepng from LA to SF in under 40min.</p>
