--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,6 +47,15 @@
 		</div>
 	</div>
 	<div class="row">
+		<div class="col-md-6">
+			<a href="https://www.as.ucsb.edu/"><%= image_tag("as.png", id: "as-image") %></a>
+		</div>
+		<br>
+		<div class="col-md-6">
+			<a href="http://tenon.com/"><%= image_tag("tattu.png") %></a>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-md-6">
 			<a href="https://www.calchamber.com/Pages/default.aspx"><%= image_tag("ca.png") %></a>
