old crows added

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,9 +48,12 @@ a:hover, a:focus, a:active {
 	max-width: 80%;
 }
 
-#as-image {
+#as-image, #crows-image {
 	width: 27%;
+	margin-top: 30px;
 }
+
+
 
 .col-md-12 img {
 	max-width: 100%;
