--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -39,7 +39,7 @@
 	<br>
 	<div class="row">
 		<div class="col-md-6">
-			<a href="http://www.econ.ucsb.edu/"><%= image_tag("ucsbecon.png") %></a>
+			<a href="http://tenon.com/"><%= image_tag("tattu.png") %></a>
 		</div>
 		<br>
 		<div class="col-md-6">
@@ -48,19 +48,21 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6">
+			<a href="https://www.calchamber.com/Pages/default.aspx"><%= image_tag("ca.png") %></a>
+		</div>
+		<br>
+		<div class="col-md-6">
+			<a href="http://www.econ.ucsb.edu/"><%= image_tag("ucsbecon.png") %></a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
 			<a href="https://www.as.ucsb.edu/"><%= image_tag("as.png", id: "as-image") %></a>
 		</div>
 		<br>
 		<div class="col-md-6">
-			<a href="http://tenon.com/"><%= image_tag("tattu.png") %></a>
+			<a href="https://www.crows.org/chapters/santa-barbara-chapter-events.html"><%= image_tag("old_crows.JPG", id: "crows-image") %></a>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-6">
-			<a href="https://www.calchamber.com/Pages/default.aspx"><%= image_tag("ca.png") %></a>
-		</div>
-		<div class="col-md-3"></div>
 	</div>
 	<br>
 	<div class="row">
